test-projects/syntax-error/dev-resources/circleci_test/config.clj
(require '[com.leafclick.circleci.test.teamcity])
{:reporters [com.leafclick.circleci.test.teamcity/teamcity-reporter]}